# cli

./: .cursorrules  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .npmrc  .nxignore  .prettierignore  AGENTS.md  API_AUDIT.md  API_NORTH_STAR.md  API_SESSION_DESIGN.md  API_UNIFICATION_PROPOSAL.md  CLAUDE.md  CONTRIBUTING.md  Gemfile  HOSTED_HTML_PROTOTYPE.md  HYDROGEN-TODO.md  HYDROGEN.md  README.md  RESULTS.tsv  TODO.md  UPGRADE_GUIDE.md  add_products.sh  app_logs.txt  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  cargo.toml  check-actual-zod-messages.js  check-zod-errors.js  check-zod4-exact-messages.js  check-zod4-messages.js  cucumber.js  database.sqlite  demo.sh  dev.yml  (+85 more)
.bundle/: config
.changeset/: add-agent-search-command.md  add-doc-fetch-command.md  add-doc-search-command.md  add-fetch-doc-command.md  afraid-bugs-press.md  afraid-camels-swim.md  afraid-cameras-yell.md  afraid-comics-drop.md  afraid-countries-melt.md  afraid-geckos-draw.md  afraid-ghosts-confess.md  afraid-hairs-talk.md  afraid-lemons-chew.md  afraid-panthers-invent.md  afraid-parents-clap.md  afraid-readers-lick.md  all-suns-read.md  analytics-invalid-string-length.md  angry-coats-film.md  angry-comics-greet.md  angry-goats-double.md  angry-jars-worry.md  angry-otters-sell.md  angry-socks-develop.md  (+1582 more)
fixtures/app/extensions/test-func/: .output.graphql  Cargo.toml  input.graphql  metadata.json  schema.graphql  shopify.function.extension.toml
fixtures/app/extensions/test-func/src/: main.rs  tests.rs
(+2865 files in other folders)
