[package]
name = "test-func"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0"
shopify_function = { version = "0.2.3" }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
